🔧 Simplified CI: Build only, no tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,10 @@
-# This config was automatically generated from your source code
-# Stacks detected: deps:java:backend,deps:node:frontend/bug-tracker-frontend
 version: 2.1
+
 orbs:
   node: circleci/node@5
+
 jobs:
-  test-node:
-    # Install node dependencies and run tests
+  build-frontend:
     executor: node/default
     working_directory: ~/project/frontend/bug-tracker-frontend
     steps:
@@ -14,30 +13,13 @@ jobs:
       - node/install-packages:
           pkg-manager: npm
       - run:
-          name: Run tests
-          command: npm test --passWithNoTests
-  build-node:
-    # Build node project
-    executor: node/default
-    working_directory: ~/project/frontend/bug-tracker-frontend
-    steps:
-      - checkout:
-          path: ~/project
-      - node/install-packages:
-          pkg-manager: npm
-      - run:
+          name: Build React App
           command: npm run build
-      - run:
-          name: Create the ~/artifacts directory if it doesn't exist
-          command: mkdir -p ~/artifacts
-      # Copy output to artifacts dir
-      - run:
-          name: Copy artifacts
-          command: cp -R build dist public .output .next .docusaurus ~/artifacts 2>/dev/null || true
       - store_artifacts:
-          path: ~/artifacts
-          destination: node-build
-  test-java:
+          path: build
+          destination: frontend-build
+
+  build-backend:
     docker:
       - image: cimg/openjdk:17.0
     working_directory: ~/project/backend
@@ -45,38 +27,14 @@ jobs:
       - checkout:
           path: ~/project
       - run:
-          name: Calculate cache key
-          command: |-
-            find . -name 'pom.xml' -o -name 'gradlew*' -o -name '*.gradle*' | \
-                    sort | xargs cat > /tmp/CIRCLECI_CACHE_KEY
-      - restore_cache:
-          key: cache-{{ checksum "/tmp/CIRCLECI_CACHE_KEY" }}
-      - run:
-          command: mvn verify
-      - store_test_results:
-          path: target/surefire-reports
-      - save_cache:
-          key: cache-{{ checksum "/tmp/CIRCLECI_CACHE_KEY" }}
-          paths:
-            - ~/.m2/repository
-  deploy:
-    # This is an example deploy job, not actually used by the workflow
-    docker:
-      - image: cimg/base:stable
-    steps:
-      # Replace this with steps to deploy to users
-      - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
+          name: Build Java Backend
+          command: mvn clean package
+      - store_artifacts:
+          path: target
+          destination: backend-target
+
 workflows:
-  build-and-test:
+  build-and-deploy:
     jobs:
-      - test-node
-      - build-node:
-          requires:
-            - test-node
-            - test-java
-      - test-java
-    # - deploy:
-    #     requires:
-    #       - build-node
+      - build-frontend
+      - build-backend
