Clean up .gitignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-# .gitignore
-**/ServiceAccountKey.json
 **/serviceAccountKey.json
 target/
 node_modules/
 .env
 .DS_Store
+*.log
+*.class
+build/
+.vscode/
+*.py
