--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "rootDirectory": "frontend/bug-tracker-frontend"
+  "outputDirectory": "dist"
 }
