--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -61,5 +61,40 @@
     </plugin>
   </plugins>
 </build>
-  
+  <build>
+  <plugins>
+    <!-- Plugin to run the main class during development -->
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>3.1.0</version>
+      <configuration>
+        <mainClass>com.example.bugtracker.BugTracker</mainClass>
+      </configuration>
+    </plugin>
+
+    <!-- Plugin to create a runnable JAR with all dependencies -->
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <version>3.4.1</version>
+      <executions>
+        <execution>
+          <phase>package</phase>
+          <goals>
+            <goal>shade</goal>
+          </goals>
+          <configuration>
+            <transformers>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                <mainClass>com.example.bugtracker.BugTracker</mainClass>
+              </transformer>
+            </transformers>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+</build>
+
 </project>
