--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,6 @@ RUN mvn clean package
 
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
-COPY --from=build /app/target/bug-tracker-backend-1.0-SNAPSHOT-shaded.jar app.jar
+COPY --from=build /app/target/bug-tracker-backend-1.0-SNAPSHOT.jar app.jar
 EXPOSE 8080
 CMD ["java", "-jar", "app.jar"]
