--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -35,14 +35,14 @@
       <version>2.0.9</version>
     </dependency>
 
-    <!-- Firebase Admin -->
+    <!-- Firebase Admin SDK -->
     <dependency>
       <groupId>com.google.firebase</groupId>
       <artifactId>firebase-admin</artifactId>
       <version>9.2.0</version>
     </dependency>
 
-    <!-- Firestore -->
+    <!-- Google Cloud Firestore -->
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-firestore</artifactId>
@@ -52,17 +52,7 @@
 
   <build>
     <plugins>
-      <!-- Plugin to run locally -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.1.0</version>
-        <configuration>
-          <mainClass>com.example.bugtracker.BugTracker</mainClass>
-        </configuration>
-      </plugin>
-
-      <!-- Plugin to generate fat JAR -->
+      <!-- Maven Shade Plugin for creating an executable fat JAR -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -74,16 +64,26 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <shadedArtifactAttached>false</shadedArtifactAttached>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>com.example.bugtracker.BugTracker</mainClass>
                 </transformer>
               </transformers>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
             </configuration>
           </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
-
 </project>
